# swift-tokenizers

./: .gitignore  Cargo.toml  Package.resolved  Package.swift  README.md  bridging-header.h  build-swiftc-links-rust.sh  main.swift
Sources/CTokenizers/: module.modulemap
Sources/Tokenizers/: Tokenizers.swift
Tests/TokenizersTests/: TokenizerTests.swift
src/: lib.rs
swift-bridge-exp/: README.md  build-swiftc-links-rust.sh  main.swift
swift-bridge-exp/src/: lib.rs
tokenizers-sys/: README.md  build.sh  example  main.c
tokenizers-sys/.cargo/: config.toml
tokenizers-sys/bindings/: ctokenizers.h
tokenizers-sys/examples/: tokenize  tokenize.c
tokenizers-sys/src/: encoding.rs  lib.rs  models.rs  tokenizer.rs
unifii-exp/: ..swiftdoc  ..swiftsourceinfo  Cargo.toml  README.md  build.rs  test_tokenizer  test_tokenizer.swift  tokenizers.swiftmodule
unifii-exp/src/: lib.rs  tokenizers.swift  tokenizers.udl  tokenizersFFI.h  tokenizersFFI.modulemap
